# Loan-EMI-Calculator

./: pyproject.toml
.devcontainer/: devcontainer.json
src/calculator/: main.py  script.py
