[project]
name = "calculator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Suleman-Sabir", email = "sulemanbhatti690@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.46.1",
]

[project.scripts]
calculator = "calculator:main"
waleed = "calculator.script:app"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
